re PR fortran/54435 (ICE with SELECT TYPE on a non-CLASS object)

2012-09-10  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/54435
	PR fortran/54443
	* match.c (gfc_match_select_type): Make sure to only access CLASS_DATA
	for BT_CLASS.

2012-09-10  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/54435
	PR fortran/54443
	* gfortran.dg/select_type_29.f03: New.

From-SVN: r191135