gcc/fortran/match.c
@@ -5248,10 +5248,10 @@ gfc_match_select_type (void)
      array, which can have a reference, from other expressions that
      have references, such as derived type components, and are not
      allowed by the standard.
-     TODO; see is it is sufficent to exclude component and substring
+     TODO: see if it is sufficent to exclude component and substring
      references.  */
   class_array = expr1->expr_type == EXPR_VARIABLE
-		  && expr1->ts.type != BT_UNKNOWN
+		  && expr1->ts.type == BT_CLASS
 		  && CLASS_DATA (expr1)
 		  && (strcmp (CLASS_DATA (expr1)->name, "_data") == 0)
 		  && (CLASS_DATA (expr1)->attr.dimension
